ADD: 返回Locality的时候，自动去掉末尾的省/市/县/地区/自治区等信息。返回结果更加紧凑明了。